progress in form & fixed database (jpa)